@@ -1,3 +1,8 @@
+2009-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* test/Makefile.am, test/tiffcrop*.sh: Split previously existing
+	tiffcrop.sh into a collection of many specific tests.
+
 2009-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* test/tiffcp-logluv.sh: Fix test so that it works with a VPATH
